# nusantaracare_RAG_Firmansyah

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: ingest_doc.py  main.py  routes.py  schemas.py
app/service/: agent.py  config.py  rag.py
