[project]
name = "rag-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "uvicorn>=0.51.0",
]
