[project]
name = "rag-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv",
    "fastapi[standard]",
    "chromadb",
    "openai",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
]
